# OS_SysDev

Lab10/OS10_01/: CMakeLists.txt  main.cpp
Lab10/OS10_01/backups/: 24.1.2022_20.5.48.th
Lab10/OS10_01/headers/: HANDLE.h
Lab10/OS10_01/resources/: test2.th
Lab10/OS10_01/sources/: HANDLE.cpp
Lab10/OS10_HTAPI/: CMakeLists.txt  library.h  main.cpp
Lab10/OS10_STATIC/: CMakeLists.txt  CRUD.cpp  Element.cpp  Element.h  HANDLE.cpp  HANDLE.h
Lab11/OS11_HTAPI/: CMakeLists.txt  main.cpp
Lab3/OS03_01/: CMakeLists.txt  main.cpp
Lab3/OS03_02/: CMakeLists.txt  main.cpp
Lab3/OS03_03/: CMakeLists.txt  main.cpp
Lab3/OS03_04/: 01  CMakeLists.txt  main.cpp
Lab3/OS03_05/: 01  CMakeLists.txt  main.cpp
Lab3/OS03_06/: CMakeLists.txt  main.cpp
Lab3/OS03_07/: CMakeLists.txt  main.cpp
Lab4/OS04_01/: CMakeLists.txt  main.cpp
Lab4/OS04_02/: CMakeLists.txt  main.cpp
Lab4/OS04_03/: CMakeLists.txt  main.cpp
Lab4/OS04_04/: CMakeLists.txt  main.cpp
Lab4/OS04_05/: CMakeLists.txt  main.cpp
Lab4/OS04_06/: CMakeLists.txt
Lab4/OS04_08/: CMakeLists.txt
Lab5/OS05_01/: CMakeLists.txt  main.cpp
Lab5/OS05_02/: CMakeLists.txt  main.cpp
Lab5/OS05_03/: CMakeLists.txt  main.cpp
Lab5/OS05_04/: CMakeLists.txt  main.c
Lab5/OS05_05/: CMakeLists.txt  main.c
Lab5/OS05_06/: CMakeLists.txt  main.c
Lab5/OS05_07/: CMakeLists.txt  main.c
Lab5/OS05_2x/: CMakeLists.txt  main.cpp
Lab6/: report lab 6 OS.docx
Lab6/OS06_06/: CMakeLists.txt  main.c
Lab6/OS06_07/: CMakeLists.txt  main.c
Lab7/: Lab7.sln
Lab8/: Lab8.sln
Lab9/: Lab9.sln  OS09_01 - Copy.txt
(+279 files in other folders)
